--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
-    <title>Calc</title>
+    <title>Xsolla test Calculator</title>
   </head>
   <body>
 
